Final design commit

--- a/K-NAI1-WISPMANHOTSPOT4/login.html
+++ b/K-NAI1-WISPMANHOTSPOT4/login.html
@@ -379,7 +379,7 @@
                     <p class=" text-center font-gray font-bold" style="font-size: 25px;"><small>Login into
                             account</small></p>
 
-                    <p class="text-center text-black">Please enter your username plus password to login.</p>
+                    <p class="text-center text-black">Please enter your username and password to login.</p>
                     <input type="hidden" name="popup" value="true" />
                     <div class="">
                         <hr />
